--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rehooks/window-scroll-position": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "awesome-react-icons": "^1.4.8",
+    "fslightbox-react": "^1.6.2-2",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-minimal-side-navigation": "^1.9.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
